--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,72 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
 
+.app-title {
+  margin: 2em 0 1em;
+}
+
+.app-title>p {
+  font-size: .65em;
+  margin: .5em;
+}
+
+h4 {
+  color: rgb(56, 102, 170);
+}
+
 img {
   object-fit: cover;
-  width: 200px;
+  width: 150px;
+  height: 150px;
+}
+
+.item-error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 200px;
+  width: 200px;
+  border: 2px solid gray;
+  margin: auto;
+  padding: 1em;
+}
+
+.buttons-container {
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
+}
+
+.buttons-container>h5 {
+  margin-bottom: .5em
+}
+
+button {
+  all: unset;
+  font-size: .75em;
+  color: white;
+  background-color: rgba(48, 87, 145, 1);
+  width: 8em;
+  margin: auto;
+  padding: 1em;
+  border-radius: 1rem;
+  border: 4px solid white;
+}
+
+.active {
+  border: 4px solid rgb(87, 154, 255);
+}
+
+.item-card {
+  margin: 2em;
+}
+
+.item-card>h4 {
+  margin: .75em;
 }
